
This should fix the bug Creepy spotted where the buttonbar event
initialization was crashing.
----------------------------------------------------------------------
Tue Jun 18 16:24:03 2002                        Michael Jennings (mej)

Fixed the flickering of the buttonbar caused by Escreen updates.

Also fixed the deselecting of the current button on redraw.
----------------------------------------------------------------------
Thu Jun 20 11:51:59 2002                        Michael Jennings (mej)

Forgot to change the header....
----------------------------------------------------------------------
Thu Jun 20 18:32:22 2002                        Michael Jennings (mej)

Fixed the updating of the status bar for Escreen.  Also changed strdup
to STRDUP for libast.
----------------------------------------------------------------------
Thu Jun 20 18:55:59 2002                        Michael Jennings (mej)

Better fix from Azundris.
----------------------------------------------------------------------
Wed Jun 26 16:58:14 2002                        Michael Jennings (mej)

Latest Escreen stuff from Azundris, including work on twin support
(twin.sourceforge.net).
----------------------------------------------------------------------
Wed Jun 26 23:14:20 2002                        Michael Jennings (mej)

Bug-hunting....
----------------------------------------------------------------------
Thu Jun 27 09:14:39 2002                        Michael Jennings (mej)

Fix compile when Escreen support is disabled.
----------------------------------------------------------------------
Fri Jun 28 16:40:55 2002                        Michael Jennings (mej)

Additional twin stuff, plus a bug fix for dragging Escreen buttons.
----------------------------------------------------------------------
Fri Jun 28 17:02:57 2002                        Michael Jennings (mej)

One too many....
----------------------------------------------------------------------